<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="100dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
    <TextView
        android:id="@+id/delete_item_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:paddingHorizontal="20dp"
        android:text="@string/are_you_sure_you_want_to_delete"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="21sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/delete_btn"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@color/teal_700"
        android:text="@string/delete_c"
        android:gravity="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="56dp"
        app:layout_constraintTop_toBottomOf="@id/delete_item_desc"
        android:layout_marginTop="24dp"/>

    <TextView
        android:id="@+id/cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@color/teal_700"
        android:text="@string/cancel"
        android:gravity="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="56dp"
        app:layout_constraintTop_toBottomOf="@id/delete_item_desc"
        android:layout_marginTop="24dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>