<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="newsViewModel"
            type="com.beinmedia.test.features.newsTab.NewsViewModel" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.newsTab.NewsFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/search_bar_view_group"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="12dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:cardBackgroundColor="@color/gray">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:layout_constraintTop_toTopOf="parent">
            <FrameLayout
                android:id="@+id/search_icon_view_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginHorizontal="12dp">

                <ImageView
                    android:id="@+id/search_icon"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    app:srcCompat="@drawable/ic_baseline_search_24" />

                <ProgressBar
                    android:id="@+id/search_progress_bar"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="start|center_vertical"
                    android:layout_marginHorizontal="5dp"
                    android:indeterminateTint="@color/white"
                    android:visibility="gone" />
            </FrameLayout>

            <View
                android:id="@+id/search_divider"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:background="@color/white"
                app:layout_constraintStart_toEndOf="@id/search_icon_view_group"/>

            <EditText
                android:id="@+id/search_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/search_divider"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@android:color/transparent"
                android:hint="@string/search"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textStyle="bold"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toStartOf="@id/camera_icon"/>

            <ImageView
                android:id="@+id/camera_icon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginHorizontal="8dp"
                android:adjustViewBounds="true"
                app:tint="@color/white"
                android:src="@drawable/ic_baseline_gray_photo_camera_128" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <com.ernestoyaquello.dragdropswiperecyclerview.DragDropSwipeRecyclerView
        android:id="@+id/news_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:item_layout="@layout/item_news"
        tools:itemCount="6"
        android:layout_marginTop="8dp"
        app:long_press_to_start_dragging="true"
        app:layout_constraintTop_toBottomOf="@id/search_bar_view_group"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_dynamic_feed_24"
        android:layout_margin="24dp"
        android:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <ProgressBar
        android:id="@+id/news_progress"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <LinearLayout
        android:id="@+id/no_data_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/empty_image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_margin="5dp"
            android:src="@drawable/ic_no_image_24"
            android:visibility="visible" />

        <TextView
            android:id="@+id/no_feed_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/no_data"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/add_image_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/black_rectangle_background"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:textAllCaps="true"
            android:text="@string/add_an_image"
            android:textColor="@color/white" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>